adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -12,5 +12,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, aut, tempora velit debitis nesciunt 
         consequatur minima, dicta repudiandae quia molestias iusto quae. Iure sapiente deleniti beatae quae, 
         reiciendis voluptas incidunt.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat atque voluptas, nobis, adipisci 
+            repellat quam aperiam ipsam ea perspiciatis tempore officiis deleniti molestiae sapiente aliquid 
+            magni in ipsa odio labore? </p>
 </body>
 </html>
